--- a/src/style.css
+++ b/src/style.css
@@ -2,71 +2,160 @@ body {
     background: #ffffff;
     height: 100vh;
     margin: 0;
-    padding:0;
+    padding: 0;
     box-sizing: border-box;
-    /* line-height: 1; */
+    line-height: 1;
     /* max-width: 1400px; */
-  }
-  
-  
-  h1 {
-    font-size:96px;
-  }
-  
-  h2 {
+}
+
+
+h1 {
+    font-size: 72px;
+    
+    
+}
+
+h2 {
+    font-size: 36px;
+    line-height: 0.5;
+}
+
+h3 {
     font-size: 24px;
-    font-weight:lighter;
-  }
-  
-  nav {
-    /* border:1px solid red; */
-    display:flex;
-    flex-direction:row;
-    /* padding: 20px; */
-  
-  }
-  
-  #logoText {
+    font-weight: lighter;
+    line-height: 0.5;
+    width: 100%;
+}
+
+nav {
+    padding: 20px;
+    display: flex;
+    flex-direction: row;
+
+}
+
+#logoText {
     margin-left: 5px;
-  }
-  
-  img {
-    /* width: 120px; */
-    /* height: 120px; */
-    /* border:1px solid red; */
-  }
-  
-  #navLinks {
-    display:flex;
+}
+
+
+#navLinks {
+    display: flex;
     flex-direction: row;
     align-items: center;
     margin-left: auto;
+    width: 100%;
     /* border:1px solid red; */
-    padding:0;
-  
+    padding: 0;
+
     /* margin:0; */
-    gap:1rem;
-  }
-   li {
+    gap: 1rem;
+}
+
+li {
     list-style: none;
     /* white-space: nowrap; */
-  }
-  
-  .pill {
+}
+
+.pill {
     background-color: #769AFF;
     padding: 10px 20px;
-    color:white;
+    color: white;
+
     font-weight: bold;
     border-radius: 50px;
-  }
-  
-  .purple {
-  background-color: #D1D2F9;
-  
-  color: black;
-  }
-  
-  #hero {
+}
+
+.purple {
+    background-color: #D1D2F9;
+
+    color: black;
+}
+
+#hero {
     height: 515px;
-    background-color:#D1D2F9;
-  }
+    background-color: #D1D2F9;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 100px;
+    position:relative;
+    
+}
+
+#heroImage {
+    position: relative;
+}
+
+.roundImage {
+    border: 4px solid white;
+    border-radius: 50%;
+    height: 300px;
+    width: 300px;
+    object-fit: cover;
+}
+
+.rec {
+    display: inline;
+    background-color: #F37F7F;
+    position: absolute;
+    bottom: 40px;
+    right: 20px;
+    color: white;
+    font-size: 14px;
+    font-weight: bold;
+    padding: 6px;
+    border-radius: 8px;
+}
+
+.hangingButton {
+    position: absolute;
+    bottom: -20px;
+    border-radius: 8px;
+    font-size: 40px;
+    border:0;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    transform: rotate(-3deg);
+    cursor:pointer;
+}
+
+button:active {
+    opacity: 0.8;
+
+}
+
+#main {
+    margin: 100px;
+    text-align: center;
+}
+
+/* Not needed */
+#kidsImages {
+    display:flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+
+}
+
+.happyBoy {
+    position: relative;
+}
+#kidsImages img {
+    border: 4px solid black;
+    /* margin-right: 20px; */
+    /* padding: 20px; */
+}
+
+article {
+    margin: 100px;
+}
+    margin: 100px;
+
+
+#table {
+    border: 1px solid black;
+    height: 200px;
+    width: 200px;
+}
