--- a/src/style.css
+++ b/src/style.css
@@ -1,23 +1,30 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     background: #ffffff;
-    height: 100vh;
+    /* height: 100vh; */
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    
     line-height: 1;
     /* max-width: 1400px; */
 }
 
 
 h1 {
-    font-size: 72px;
+    font-size: 60px;
     
     
 }
 
+
+
+
 h2 {
-    font-size: 36px;
-    line-height: 0.5;
+    font-size: 30px;
+    line-height: 0.8;
 }
 
 h3 {
@@ -30,8 +37,16 @@ h3 {
 nav {
     padding: 20px;
     display: flex;
+    /* width: 100%; */
+    /* border:1px solid red; */
     flex-direction: row;
+    /* justify-content: center; */
 
+}
+
+#logo {
+    /* width: 100%; */
+    /* height: 50px; */
 }
 
 #logoText {
@@ -44,11 +59,7 @@ nav {
     flex-direction: row;
     align-items: center;
     margin-left: auto;
-    width: 100%;
-    /* border:1px solid red; */
     padding: 0;
-
-    /* margin:0; */
     gap: 1rem;
 }
 
@@ -72,8 +83,8 @@ li {
     color: black;
 }
 
-#hero {
-    height: 515px;
+.hero {
+    height: 420px;
     background-color: #D1D2F9;
     display: flex;
     flex-direction: row;
@@ -142,20 +153,140 @@ button:active {
 .happyBoy {
     position: relative;
 }
+
 #kidsImages img {
     border: 4px solid black;
     /* margin-right: 20px; */
     /* padding: 20px; */
 }
 
+
 article {
     margin: 100px;
 }
-    margin: 100px;
-
+   
 
 #table {
-    border: 1px solid black;
-    height: 200px;
-    width: 200px;
+
+    width: 100%;
+    height: 400px;
+    max-width: 600px;
+    margin : auto;
+    /* margin:auto; */
+    /* text-align: center; */
+    /* height: 00px; */
+    /* border: 1px solid reds; */
+    display:flex;
+    /* border: 1px solid red; */
+
+
+}
+
+.leftCol{
+    width: 50%;
+    height: 90%;
+    align-self: flex-end;
+    border:1px solid lightgray;
+    border-radius: 8px 8px 0 0;
+}
+
+.rightCol{
+    width: 50%;
+    height: 100%;
+    align-self: flex-start;
+    border:1px solid lightgray;
+    border-radius: 8px 8px 0 0;
+    /* border:1px solid red; */
+    /* background-color:blue; */
+    /* border-top:none; */
+
+}
+
+
+.header {
+    /* border-top:1px solid red; */
+    /* border-bottom:1px solid red; */
+    height: 60px;
+    border-radius: 8px 8px 0 0;
+    background-color: #D4CCE1;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    /* margin-top:auto; */
+
+}
+
+.with {
+    background-color: #769AFF;
+    color:white;
+    height: 100px;
+}
+
+.leftCol ul,
+.rightCol ul {
+    margin: 0;
+    position: relative;
+    height: calc(100% - 60px);
+    /* margin: 20px 0; */
+    /* padding: 20px 0; */
+    padding: 30px;
+    /* border:1px solid green; */
+        display:flex;
+        flex-direction: column;
+        text-align: left;
+        font-size:18px;
+        justify-content: space-between;
+}
+
+.rightCol ul {
+    height: calc(100% - 100px);
+    /* outline: 4px solid red; */
+   
+    /* padding: 20px 0; */
+    /* margin: 20px 0; */
+}
+
+#teacher{
+    text-align: center;
+
+}
+
+#joinTheList {
+    text-align: center;
+    /* display: flex; */
+    /* justify-content: center; */
+    /* flex-direction: column; */
+    /* align-items: center; */
+    margin: 50px 0;
+    width: 100%;
+}
+
+.textInput {
+    padding: 14px 18px;
+    border:1px solid lightgrey;
+    background-color: #F8F4F4;
+    border-radius: 5px;
+}
+
+
+form {
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap:1rem;
+}
+
+.subscribe {
+    width: 280px;
+    border-radius: 8px;
+    border:0;
+    padding: 20px 40px;
+    font-size: 20px;
+}
+
+footer {
+    height: 60px;
+    width: 100%;
+    background-color: #D1D2F9;
 }
